syntax = "proto3";

package app;

// Declare a service for each controller you have
service BookController {
  // Declare an rpc for each method that is called via gRPC
  rpc CreateBook (CreateBookRequest) returns (Book);
  rpc GetBooks (GetUsersBooks) returns (GetBooksResponse);
  rpc GetBook (GetBookRequest) returns (BookResponse);
  rpc UpdateBook(UpdateBookRequest) returns (BookResponse);
  rpc DeleteBook (DeleteBookRequest) returns (DeleteBookResponse);

}

message GetUsersBooks {
  string userId = 1;
}

message GetBookRequest {
  string id = 1;
  string userId = 2;
}

message DeleteBookRequest {
  string id = 1;
  string userId = 2;
}

message DeleteBookResponse {
  bool success = 1;
}

message Book {
  string id = 1;
  string title = 2;
  string description = 3;
  string author = 4;
  string userId = 5;
}

message CreateBookRequest {
  string title = 1;
  string description = 2;
  string author = 3;
  string userId = 4;
}

message UpdateBookRequest {
  string id = 1;
  string title = 2;
  string author = 3;
  string description = 4;
  string userId = 5;
}

message BookResponse {
  Book book = 1;
}

message GetBooksResponse {
  repeated Book books = 1;
}

message Empty {}
